--- a/src/index.css
+++ b/src/index.css
@@ -137,3 +137,16 @@ html{
   height: 100%;
 
 }
+
+#default-select{
+  border-radius: 100px;
+}
+
+.hideScroll {
+  scrollbar-width: none; /* For Firefox */
+  -ms-overflow-style: none; /* For Internet Explorer and Edge */
+}
+
+.hideScroll::-webkit-scrollbar {
+  width: 0px; /* For Chrome, Safari, and Opera */
+}
