--- a/src/pages/bigSwiperStyles.css
+++ b/src/pages/bigSwiperStyles.css
@@ -35,7 +35,9 @@
   
   .mySwiper2 {
     height: 100%;
-    width: 100%
+    width: 100%;
+    max-height: 500px;
+    
 
   }
   
@@ -52,7 +54,7 @@
   }
 
   .swiper-wrapper{
-    gap: 5px;
+    gap: 10px;
   }
   .swiper-slide{
     margin: 0 !important;
@@ -78,8 +80,8 @@
     color:white;
   }
 
-  @media screen and (min-width:600px) {
+  /* @media screen and (min-width:600px) {
     .swiper-wrapper{
         gap: 10px;
       }
-  } 
+  }  */
