--- a/src/index.css
+++ b/src/index.css
@@ -158,6 +158,12 @@ html{
   color: #767676 !important;
 }
 
+.ReactModal__Overlay {
+	background-color: rgba(0, 0, 0, 0.632) !important;
+	z-index: 50;
+}
+
+
 .block-shadow{
   -webkit-box-shadow: 0px 0px 22px -5px rgba(34, 60, 80, 0.17);
   -moz-box-shadow: 0px 0px 22px -5px rgba(34, 60, 80, 0.17);
